# fastapi_bookshop

./: .env  .gitignore  LICENCE  README.md  alembic.ini  config.py  conftest.py  conftest_row.py  database.py  fastapi_testclient.py  main.py  pyproject.toml
api/: __init__.py  database.py  dependencies.py
api/core/: base_validator.py  server.py
api/models/: AuthorModel.py  BookModel.py  BuyBookModel.py  BuyModel.py  BuyStepModel.py  CityModel.py  ClientModel.py  GenreModel.py  StepModel.py  UserModel.py  UserlistModel.py  __init__.py
api/routers/: AuthTestRouter.py  AuthorRouter.py  BookRouter.py  GenreRouter.py  HelloRouter.py  RootRouter.py  UserRouter.py  UserlistRouter.py  (+1 more)
auth/: auth.py  manager.py  user.py
db_creation/: appsettings.json
migrations/: env.py  examples.py  timestamptz.py
models/: Genre.py  ObjBaseModel.py  Task.py  __init__.py
reports/: BooksThatWasNotSoldRouter.py  QtyBalanceRouter.py  __init__.py
routers/: GenreRouter.py  TaskRouter.py  __init__.py
schemas/: GenreSchema.py  __init__.py
sql_scripts/: README.md  create_sqlite_db.py
tests/: AuthTestRouter_get_anonymous_test.py  AuthTestRouter_test.py  AuthorRouter_get_item_by_id_test.py  AuthorRouter_test.py  BaseValidator_01_rule_for_test.py  BaseValidator_02_must_test.py  BaseValidator_03_when_test.py  BaseValidator_04_message_test.py  BaseValidator_05_response_content_test.py  BaseValidator_06_full_testing.py  BookRouter_test.py  GenreRouter_test.py  RootRouter_get_hello_world_test.py  RootRouter_test.py  UserRouter_register_testing.py  __init__.py  conftest.py  genre_test.py
(+49 files in other folders)
