[tool.poetry]
name = "-21-fastapi-bookshop"
version = "0.1.0"
description = ""
authors = ["NikolayMakovetsky <nicholasmakovetsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
sqlalchemy = "^2.0.35"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
