[tool.poetry]
name = "-21-fastapi-bookshop"
version = "0.1.0"
description = ""
authors = ["NikolayMakovetsky <nicholasmakovetsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
uvicorn = "^0.31.1"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
